# certified

./: .gitignore  .readthedocs.yaml  Makefile  README.md  TODO.md  client.py  mkdocs.yml  new_ca.py  pyproject.toml  sign_cert.py  test.rc  test2.rc
.github/workflows/: python-package.yml
certified/: __init__.py  blob.py  ca.py  cert.py  cert_base.py  cert_info.py  certified.py  config.py  encode.py  fast.py  generate.py  layout.py  loki.py  message.py  models.py  serial.py  test.py  verify.py  wrappers.py
docs/: TODO.md  authz.md  certs.md  cli.md  explanation.md  how-to-guides.md  index.md  keys.md  reference.md  tutorials.md
docs/concepts/: authz.md  certs_vs_tokens.md  cross_chain_trust.md  index.md  keys.md
docs/howto/: a2a.md  add-client.md  add-service.md  api-client.md  api-server.md  index.md  init.md  inspect.md  introduce.md  logging.md  set-org.md
docs/reference/: blob.md  ca.md  cert.md  cert_base.md  cert_info.md  encode.md  fast.md  index.md  layout.md  models.md  serial.md
docs/tutorials/: connecting.md  index.md  serving.md  setup.md
examples/: crewai_agent.py  echo.py  echo_client.py  get-intro.sh  google_adk_agent.py  langgraph_agent.py  signer.py  weather_client.py
examples/a2a/: client.py  server.py
tests/: cross_chain.py  smoke_test.py  sock_test.py  test_biscuit_bridge.py  test_ca.py  test_certified_cli.py  test_csr.py  test_fast.py  test_intros.py  test_keytypes.py  test_start.py
