[tool.poetry]
name = "certified"
version = "0.1.0"
description = "The missing certificate infrastructure for HTTPS-REST APIs."
authors = ["David M. Rogers <predictivestatmech@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cryptography = "^43.0.0"
pydantic = "^2.8.2"
httpx = "^0.27.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
mkdocs-material = "^9.5.30"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
